--- a/styles/_profile.scss
+++ b/styles/_profile.scss
@@ -1287,13 +1287,12 @@
     height: 80vh;
     gap: 2rem;
     max-width: $size-xl;
-    position: relative;
     width: 100%;
 
     @media screen and (max-width: $size-md) {
       flex-direction: column;
       height: 100vh;
-      gap: .5rem;
+      gap: 1rem;
       overflow-y: auto;
       padding: .5rem;
       width: 100vw;
@@ -1319,7 +1318,7 @@
       align-items: center;
 
       .preview-content {
-        height: 28rem;
+        height: 80vh;
         width: 22rem;
         overflow: hidden auto;
         overscroll-behavior: contain;
@@ -1333,10 +1332,11 @@
     display: flex;
     justify-content: center;
     margin: 0 auto;
+    position: relative;
 
     &.preview-image-poap {
       padding: 2rem;
-      
+
       .img-container,
       .img-responsive {
         border-radius: 50%;
@@ -1405,7 +1405,7 @@
     word-break: break-word;
 
     .panel-widget {
-      margin: 2rem 0;
+      margin: 1rem 0;
 
       &:first-child {
         margin-top: 0;
@@ -1617,6 +1617,8 @@
 
   .profile-card-avatar {
     height: 2rem;
+    margin-right: .5rem;
+    position: relative;
 
     .avatar,
     svg {
@@ -1624,6 +1626,25 @@
       box-shadow: 0 .1rem .6rem rgba($dark-color, .1);
       height: 2rem;
       width: 2rem;
+    }
+
+    .profile-card-platform {
+      align-items: center;
+      background-color: var(--badge-bg-color, rgba($dark-color, .95));
+      border: .05rem solid transparent;
+      border-color: var(--badge-bg-color, transparent);
+      border-radius: 50%;
+      bottom: -.4rem;
+      box-shadow: 0 .05rem .1rem var(--badge-bg-color, rgba($dark-color, .05));
+      display: flex;
+      flex: 0 0;
+      height: 1.2rem;
+      padding: .2rem;
+      position: absolute;
+      right: -.4rem;
+      text-decoration: none;
+      transition: all .2s ease;
+      width: 1.2rem;
     }
   }
 
