--- a/styles/web3bio.scss
+++ b/styles/web3bio.scss
@@ -372,6 +372,24 @@ body {
       }
     }
   }
+
+  @media screen and (min-width: $size-md) {
+    .widget-indicator-item {
+      &.tooltip {
+        &::after {
+          bottom: 50%;
+          left: auto;
+          right: 100%;
+          transform: translate($unit-2, 50%);
+        }
+        &:hover {
+          &::after {
+            transform: translate(-$unit-1, 50%);
+          }
+        }
+      }
+    }
+  }
 }
 
 .web3bio-placeholder {
