--- a/styles/_modal.scss
+++ b/styles/_modal.scss
@@ -400,6 +400,10 @@
         }
       }
 
+      .modal-profile-name {
+        font-size: 1rem;
+      }
+
       .modal-profile-bio {
         width: 80%;
         font-size: .8rem;
