--- a/styles/_modal.scss
+++ b/styles/_modal.scss
@@ -1,408 +1,423 @@
-
 .web3bio-mask-cover {
-    align-items: center;
-    display: flex;
-    position: fixed;
-    justify-content: center;
-    left: 0;
-    top: 0;
-    background: rgba($dark-color, .5);
-    right: 0;
-    bottom: 0;
-    z-index: 1000;
-    backdrop-filter: blur(.2rem);
-  
-    .modal-graph-container {
-      background: #fff;
-      border-radius: .4rem;
-      box-shadow: 0 .4rem 2rem rgba($dark-color, .5);
-      height: calc(100vh - 3rem);
-      overflow: hidden;
-      overscroll-behavior: contain;
-      position: relative;
-      width: calc(100vw - 3rem);
-  
-      .graph-header {
+  align-items: center;
+  display: flex;
+  position: fixed;
+  justify-content: center;
+  left: 0;
+  top: 0;
+  background: rgba($dark-color, .5);
+  right: 0;
+  bottom: 0;
+  z-index: 1000;
+  backdrop-filter: blur(.2rem);
+
+  .modal-graph-container {
+    background: #fff;
+    border-radius: .4rem;
+    box-shadow: 0 .4rem 2rem rgba($dark-color, .5);
+    height: calc(100vh - 3rem);
+    overflow: hidden;
+    overscroll-behavior: contain;
+    position: relative;
+    width: calc(100vw - 3rem);
+
+    .graph-header {
+      align-items: center;
+      display: flex;
+      font-size: .7rem;
+      justify-content: space-between;
+      left: .5rem;
+      position: absolute;
+      right: .5rem;
+      top: .5rem;
+      z-index: 999;
+
+      .graph-title {
         align-items: center;
-        display: flex;
-        font-size: .7rem;
-        justify-content: space-between;
-        left: .5rem;
-        position: absolute;
-        right: .5rem;
-        top: .5rem;
-        z-index: 999;
-  
-        .graph-title {
-          align-items: center;
-          border-radius: .4rem;
-          display: flex;
-          line-height: 1rem;
-          padding: .4rem;
-          pointer-events: none;
-          user-select: none;
-          word-break: break-all;
-        }
-  
-        .graph-header-action {
-          display: flex;
-          align-items: center;
-          gap: .5rem;
-        }
-      }
-  
-      .web3bio-tooltip {
-        position: absolute;
-        background: #fcfcfc;
-        z-index: 999;
-        list-style-type: none;
-        border-radius: 8px;
-        font-size: .6rem;
-        max-width: 400px;
-        min-width: 200px;
-        text-align: left;
-        user-select: none;
-        padding: 8px 12px;
-        pointer-events: none;
-        border: 1px solid rgba($dark-color, .25);
-        box-shadow: 0 0.1rem 1.2rem hsla(0, 0%, 7%, .3);
-        border: 0;
-  
-        ul {
-          padding-left: 0;
-          margin: 0;
-  
-          li {
-            list-style-type: none;
-            list-style: none;
-            overflow-wrap: break-word;
-            word-break: break-all;
-            margin: 0;
-  
-            span {
-              font-size: .5rem;
-  
-            }
-          }
-        }
-      }
-  
-      .svg-canvas {
-        .edge-selected {
-          stroke-width: 1.5;
-        }
-  
-        .node-selected {
-          stroke-width: 3;
-          stroke-opacity: 1;
-        }
-  
-        .edge-path {
-          stroke: #cecece;
-          stroke-opacity: .65;
-          fill: transparent;
-          pointer-events: none;
-  
-        }
-  
-        .edge-label {
-          user-select: none;
-          fill: #999;
-          font-size: 10px;
-          font-weight: 400;
-          pointer-events: none;
-        }
-  
-        .edge-label-selected {
-          fill: $dark-color;
-        }
-  
-        .node {
-          cursor: pointer;
-        }
-  
-        .identity-badge {
-          cursor: pointer;
-        }
-  
-        .displayName {
-          fill: $dark-color;
-          user-select: none;
-          font-size: 12px;
-          font-weight: 500;
-        }
-  
-        .identity {
-          fill: $gray-color;
-          user-select: none;
-          font-size: 11px;
-          font-weight: 400;
-        }
-  
-        .identity-icon {
-          cursor: pointer;
-          width: 20px;
-          height: 20px
-        }
-  
-        .badge-icon {
-          fill: none;
-          pointer-events: none;
-          cursor: pointer;
-          width: 18px;
-          height: 20px;
-        }
-  
-      }
-  
-      @media screen and (max-width: $size-sm) {
-        @supports (height: 100dvh) {
-          height: calc(100dvh - .5rem);
-          width: calc(100dvw - .5rem);
-        }
-      }
-  
-      .loading-mask {
         border-radius: .4rem;
-        position: absolute;
-        height: 94%;
-        max-height: 40rem;
-        max-width: 64rem;
-        width: 94%;
+        display: flex;
+        line-height: 1rem;
+        padding: .4rem;
+        pointer-events: none;
+        user-select: none;
+        word-break: break-all;
+      }
+
+      .graph-header-action {
         display: flex;
         align-items: center;
-        justify-content: center;
-        z-index: 99;
-        background: #fff;
+        gap: .5rem;
       }
     }
-  
-    .web3bio-modal-container {
-      position: relative;
-      border-radius: 1rem;
-      height: 100%;
-      max-height: 100vh;
-      max-width: $size-xl;
-      overflow-y: auto;
-      overscroll-behavior: contain;
-      padding: 2rem;
-      scroll-behavior: smooth;
-      width: 100%;
-      z-index: 101;
-  
-      @media screen and (max-width: $size-sm) {
-        @supports (height: 100dvh) {
-          height: 100dvh;
-        }
-      }
-  
-      @media screen and (max-width: $size-sm) {
-        padding: .5rem;
-      }
-  
-      .web3-profile-base {
-        top: 0;
-      }
-  
-      &.modal-share-container {
-        display: flex;
-        flex-direction: column;
-        height: auto;
-        max-height: calc(100vh - 4rem);
-        max-width: 28rem;
-        padding: 2rem;
-        width: 95%;
-  
-        @media screen and (max-width: $size-sm) {
-          padding: 1.5rem;
-        }
 
-        .profile-share-header {
-          align-items: center;
-          display: flex;
-          justify-content: space-between;
-          padding-bottom: 1.5rem;
+    .web3bio-tooltip {
+      position: absolute;
+      background: #fcfcfc;
+      z-index: 999;
+      list-style-type: none;
+      border-radius: 8px;
+      font-size: .6rem;
+      max-width: 400px;
+      min-width: 200px;
+      text-align: left;
+      user-select: none;
+      padding: 8px 12px;
+      pointer-events: none;
+      border: 1px solid rgba($dark-color, .25);
+      box-shadow: 0 0.1rem 1.2rem hsla(0, 0%, 7%, .3);
+      border: 0;
 
-          .btn-close {
-            position: absolute;
-            right: 1rem;
-            top: 1rem;
-          }
-        }
-      
-        .profile-share-body {
-          flex: 1;
-          gap: .2rem;
-          padding: 0;
-        }
-
-        .profile-share-actions {
-          align-items: center;
-          display: flex;
-          gap: .5rem;
-          margin-top: 1rem;
-
-          .btn-group {
-            flex: 1;
-          }
-
-          @media screen and (max-width: $size-sm) {
-            flex-direction: column;
-          }
-        }
-      
-        .profile-share-footer {
-          padding-top: 1rem;
-      
-          .input-group-btn {
-            position: relative;
-          }
-      
-          .tooltip-copy {
-            position: absolute;
-          }
-        }
-      
-        .btn-group {
-          flex-wrap: wrap;
-      
-          .btn {
-            gap: .2rem;
-          }
-        }
-      
-        .profile-share-card {
-          background: $bg-color;
-          border-radius: .5rem;
-          box-shadow: 0 -.05rem 2rem rgba($dark-color, .15), inset 0 -.05rem .1rem rgba($dark-color, .025);
-          display: flex;
-          flex-direction: column;
-          height: 100%;
-          min-height: 10rem;
-          position: relative;
-          width: 100%;
-          
-          @media screen and (max-width: $size-md) {
-            min-height: 8rem;
-          }
-          
-          .img-responsive {
-            border-radius: .5rem;
-            height: 12rem;
-            margin: 0 auto;
-            transition: filter 0.3s ease-out;
-            width: auto;
-          }
-        }
-      }
-  
-      &.modal-search-container {
-        padding-top: 15vh;
-  
-        .web3bio-search {
-          margin: auto;
-          max-width: 30rem;
-  
-          .form-input-group {
-            animation: bounce-in .2s cubic-bezier(.5, .25, .5, 1) 1;
-          }
-        }
-      }
-  
-      .modal-article-container {
-        width: 100%;
-        height: 100%;
-        background: #fff;
-        max-width: $size-md;
-        margin: auto;
-        padding: 2rem 4rem;
-        box-sizing: border-box;
-        overflow-y: auto;
-        border-radius: .5rem;
-        position: relative;
-  
-        @media screen and (max-width: $size-sm) {
-          padding: 1rem;
-        }
-        
-  
-        .modal-article-title {
-          font-size: 1.2rem;
-          margin-bottom: 1.2rem;
-        }
-
-        .modal-article-action {
-          margin-bottom: 1.2rem;
-        }
-  
-        img {
-          height: auto;
-          max-width: 100%;
-        }
-  
-        h1 {
-          font-size: 1.2rem;
-          font-weight: 700;
-        }
-  
-        h2 {
-          font-size: 1rem;
-          font-weight: 700;
-        }
-  
-        h3 {
-          font-size: .8rem;
-          font-weight: 700;
-        }
+      ul {
+        padding-left: 0;
+        margin: 0;
 
         li {
-          p {
-            display: inline;
+          list-style-type: none;
+          list-style: none;
+          overflow-wrap: break-word;
+          word-break: break-all;
+          margin: 0;
+
+          span {
+            font-size: .5rem;
+
           }
         }
       }
+    }
 
-      .modal-preview-container {
-        position: relative;
-  
-        .btn {
-          width: unset;
-          height: unset;
-          padding: .2rem
-        }
-  
-        .external-icon {
-          opacity: 0;
+    .svg-canvas {
+      .edge-selected {
+        stroke-width: 1.5;
+      }
+
+      .node-selected {
+        stroke-width: 3;
+        stroke-opacity: 1;
+      }
+
+      .edge-path {
+        stroke: #cecece;
+        stroke-opacity: .65;
+        fill: transparent;
+        pointer-events: none;
+
+      }
+
+      .edge-label {
+        user-select: none;
+        fill: #999;
+        font-size: 10px;
+        font-weight: 400;
+        pointer-events: none;
+      }
+
+      .edge-label-selected {
+        fill: $dark-color;
+      }
+
+      .node {
+        cursor: pointer;
+      }
+
+      .identity-badge {
+        cursor: pointer;
+      }
+
+      .displayName {
+        fill: $dark-color;
+        user-select: none;
+        font-size: 12px;
+        font-weight: 500;
+      }
+
+      .identity {
+        fill: $gray-color;
+        user-select: none;
+        font-size: 11px;
+        font-weight: 400;
+      }
+
+      .identity-icon {
+        cursor: pointer;
+        width: 20px;
+        height: 20px
+      }
+
+      .badge-icon {
+        fill: none;
+        pointer-events: none;
+        cursor: pointer;
+        width: 18px;
+        height: 20px;
+      }
+
+    }
+
+    @media screen and (max-width: $size-sm) {
+      @supports (height: 100dvh) {
+        height: calc(100dvh - .5rem);
+        width: calc(100dvw - .5rem);
+      }
+    }
+
+    .loading-mask {
+      border-radius: .4rem;
+      position: absolute;
+      height: 94%;
+      max-height: 40rem;
+      max-width: 64rem;
+      width: 94%;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      z-index: 99;
+      background: #fff;
+    }
+  }
+
+  .web3bio-modal-container {
+    position: relative;
+    border-radius: 1rem;
+    height: 100%;
+    max-height: 100vh;
+    max-width: $size-xl;
+    overflow-y: auto;
+    overscroll-behavior: contain;
+    padding: 2rem;
+    scroll-behavior: smooth;
+    width: 100%;
+    z-index: 101;
+
+    @media screen and (max-width: $size-sm) {
+      @supports (height: 100dvh) {
+        height: 100dvh;
+      }
+    }
+
+    @media screen and (max-width: $size-sm) {
+      padding: .5rem;
+    }
+
+    .web3-profile-base {
+      top: 0;
+    }
+
+    &.modal-share-container {
+      display: flex;
+      flex-direction: column;
+      height: auto;
+      max-height: calc(100vh - 4rem);
+      max-width: 28rem;
+      padding: 2rem;
+      width: 95%;
+
+      @media screen and (max-width: $size-sm) {
+        padding: 1.5rem;
+      }
+
+      .profile-share-header {
+        align-items: center;
+        display: flex;
+        justify-content: space-between;
+        padding-bottom: 1.5rem;
+
+        .btn-close {
           position: absolute;
-          top: 1rem;
           right: 1rem;
-          transition: opacity .2s ease;
-  
-          &:hover {
+          top: 1rem;
+        }
+      }
+
+      .profile-share-body {
+        flex: 1;
+        gap: .2rem;
+        padding: 0;
+      }
+
+      .profile-share-actions {
+        align-items: center;
+        display: flex;
+        gap: .5rem;
+        margin-top: 1rem;
+
+        .btn-group {
+          flex: 1;
+        }
+
+        @media screen and (max-width: $size-sm) {
+          flex-direction: column;
+        }
+      }
+
+      .profile-share-footer {
+        padding-top: 1rem;
+
+        .input-group-btn {
+          position: relative;
+        }
+
+        .tooltip-copy {
+          position: absolute;
+        }
+
+        .profile-download-vcard {
+          margin-top: 1rem;
+          width: 100%;
+        }
+      }
+
+      .btn-group {
+        flex-wrap: wrap;
+
+        .btn {
+          gap: .2rem;
+        }
+      }
+
+      .profile-share-card {
+        position: relative;
+        background: $bg-color;
+        border-radius: .5rem;
+        box-shadow: 0 -.05rem 2rem rgba($dark-color, .15), inset 0 -.05rem .1rem rgba($dark-color, .025);
+        display: flex;
+        flex-direction: column;
+        height: 100%;
+        min-height: 10rem;
+        position: relative;
+        width: 100%;
+        cursor: pointer;
+        transition: all .1s ease;
+
+        &:hover {
+          rotate: 5deg;
+          transform: scale(1.05);
+        }
+
+        @media screen and (max-width: $size-md) {
+          min-height: 8rem;
+        }
+
+        .img-responsive {
+
+
+          border-radius: .5rem;
+          height: 12rem;
+          margin: 0 auto;
+          transition: filter 0.3s ease-out;
+          width: auto;
+        }
+      }
+    }
+
+    &.modal-search-container {
+      padding-top: 15vh;
+
+      .web3bio-search {
+        margin: auto;
+        max-width: 30rem;
+
+        .form-input-group {
+          animation: bounce-in .2s cubic-bezier(.5, .25, .5, 1) 1;
+        }
+      }
+    }
+
+    .modal-article-container {
+      width: 100%;
+      height: 100%;
+      background: #fff;
+      max-width: $size-md;
+      margin: auto;
+      padding: 2rem 4rem;
+      box-sizing: border-box;
+      overflow-y: auto;
+      border-radius: .5rem;
+      position: relative;
+
+      @media screen and (max-width: $size-sm) {
+        padding: 1rem;
+      }
+
+
+      .modal-article-title {
+        font-size: 1.2rem;
+        margin-bottom: 1.2rem;
+      }
+
+      .modal-article-action {
+        margin-bottom: 1.2rem;
+      }
+
+      img {
+        height: auto;
+        max-width: 100%;
+      }
+
+      h1 {
+        font-size: 1.2rem;
+        font-weight: 700;
+      }
+
+      h2 {
+        font-size: 1rem;
+        font-weight: 700;
+      }
+
+      h3 {
+        font-size: .8rem;
+        font-weight: 700;
+      }
+
+      li {
+        p {
+          display: inline;
+        }
+      }
+    }
+
+    .modal-preview-container {
+      position: relative;
+
+      .btn {
+        width: unset;
+        height: unset;
+        padding: .2rem
+      }
+
+      .external-icon {
+        opacity: 0;
+        position: absolute;
+        top: 1rem;
+        right: 1rem;
+        transition: opacity .2s ease;
+
+        &:hover {
+          opacity: 1;
+        }
+      }
+
+      .preview-image {
+
+        .img-responsive,
+        .video-responsive {
+          max-height: 90vh;
+          max-width: 90vw;
+        }
+
+        &:hover {
+          & .external-icon {
             opacity: 1;
           }
         }
-  
-        .preview-image {
-          .img-responsive,
-          .video-responsive {
-            max-height: 90vh;
-            max-width: 90vw;
-          }
-  
-          &:hover {
-            & .external-icon {
-              opacity: 1;
-            }
-          }
-        }
-      }
-  
-      .modal-close-icon {
-        position: fixed;
-        right: 1rem;
-        top: 1rem;
-        z-index: 999;
       }
     }
+
+    .modal-close-icon {
+      position: fixed;
+      right: 1rem;
+      top: 1rem;
+      z-index: 999;
+    }
   }
+}
