--- a/styles/_profile.scss
+++ b/styles/_profile.scss
@@ -936,10 +936,10 @@
 
     .btn-widget-more {
       align-items: flex-end;
-      background: linear-gradient(to bottom, rgba($light-color, 0) 0, rgba($light-color, 1) 75%);
+      background: linear-gradient(to bottom, rgba($light-color, 0) 40%, rgba($light-color, 1) 80%);
       bottom: 0;
       display: flex;
-      height: 10rem;
+      height: 12rem;
       justify-content: center;
       left: 0;
       padding: 1rem;
