Update Farcaster and Lens profile

--- a/styles/_modal.scss
+++ b/styles/_modal.scss
@@ -45,10 +45,6 @@
     padding: .5rem;
   }
 
-  .web3-profile-base {
-    top: 0;
-  }
-
   // Modal Graph
   &.modal-graph-container {
     background: #fff;
@@ -225,8 +221,8 @@
     height: auto;
     max-height: calc(100vh - 4rem);
     max-width: 28rem;
-    padding: 2rem;
-    width: 95%;
+    padding: 1.5rem 2rem;
+    width: calc(100vw - .5rem);
 
     @media screen and (max-width: $size-sm) {
       padding: 1.5rem;
@@ -313,16 +309,103 @@
 
   // Modal Profile
   &.modal-profile-container {
+    background: #fff;
     display: flex;
     flex-direction: column;
-    height: auto;
-    max-height: calc(100vh - 4rem);
+    height: calc(100vh - 2rem);
     max-width: 28rem;
-    padding: 2rem;
+    padding: 1.5rem 2rem;
     width: 95%;
 
     @media screen and (max-width: $size-sm) {
       padding: 1.5rem;
+      
+      @supports (height: 100dvh) {
+        height: calc(100dvh - .5rem);
+        width: calc(100dvw - .5rem);
+      }
+    }
+
+    .modal-profile-header {
+      align-items: center;
+      display: flex;
+      flex: 0 0;
+      gap: .25rem;
+      line-height: 1rem;
+      padding-bottom: 1rem;
+      position: relative;
+    }
+
+    .modal-profile-cover {
+      backdrop-filter: blur(1rem);  
+      height: 7rem;
+      left: -2rem;
+      position: absolute;
+      right: -2rem;
+      top: -2rem;
+      z-index: -1;
+
+      &.farcaster {
+        background: linear-gradient(to top, rgba(#8a63d2, 0) 0%, rgba(#8a63d2, .35) 100%);
+      }
+
+      &.lens {
+        background: linear-gradient(to top, rgba(#6bc674, 0) 0%, rgba(#6bc674, .35) 100%);
+      }
+    }
+
+    .platform-icon {
+      align-items: center;
+      background: var(--widget-primary-color, $light-color);
+      border-radius: .4rem;
+      box-shadow: inset 0 0 0 .05rem rgba($dark-color, .1), 0 .2rem .4rem rgba($dark-color, .15);
+      color: $light-color;
+      display: flex;
+      flex: 0 0 1.2rem;
+      height: 1.2rem;
+      justify-content: center;
+      position: relative;
+      transition: all .25s ease-in-out;
+      width: 1.2rem;
+    }
+
+    .active-badge {
+      align-items: center;
+      background: #8a63d2;
+      border-radius: .5rem;
+      color: $light-color;
+      display: inline-flex;
+      height: .9rem;
+      justify-content: center;
+      line-height: 1rem;
+      margin: 0 .2rem;
+      width: .9rem;
+    }
+
+    .profile-badge {
+      align-items: center;
+      background: #ffc800;
+      border-radius: .5rem;
+      color: $light-color;
+      display: inline-flex;
+      height: .9rem;
+      line-height: 1rem;
+      margin: 0 .2rem;
+      padding: 0 .25rem;
+      width: auto;
+    }
+
+    .modal-profile-body {
+      flex: 1 1;
+      margin: 0 -1rem;
+      overflow-y: auto;
+      padding: 0 1rem;
+    }
+
+    .modal-profile-footer {
+      flex: 0 0;
+      padding-top: 1rem;
+      position: relative;
     }
   }
 
@@ -354,7 +437,12 @@
     width: 100%;
 
     @media screen and (max-width: $size-sm) {
-      padding: 1rem;
+      padding: 1.5rem;
+      
+      @supports (height: 100dvh) {
+        height: calc(100dvh - .5rem);
+        width: calc(100dvw - .5rem);
+      }
     }
     
 
@@ -560,84 +648,6 @@
     width: 100%;
     word-break: break-word;
 
-    .panel-widget {
-      margin: 1rem 0;
-
-      &:first-child {
-        margin-top: 0;
-      }
-
-      &:last-child {
-        margin-bottom: 0;
-      }
-
-      .panel-widget-title {
-        font-size: .8rem;
-        font-weight: 700;
-        line-height: 1.2rem;
-        margin-bottom: .5rem;
-        text-transform: uppercase;
-      }
-
-      .panel-widget-list {
-        background: $bg-color;
-        border: .05rem solid rgba($dark-color, 0.01);
-        border-radius: .4rem;
-        box-shadow: 0 .2rem .8rem -.2rem rgba($dark-color, 0.1);
-        color: $dark-color;
-        margin: 1rem 0;
-
-        .widget-list-item {
-          display: flex;
-          justify-content: space-between;
-          padding: .6rem;
-          .profile-badge{
-            background: transparent;
-            box-shadow: none;
-            padding: 0;
-            min-width: unset;
-          }
-          .list-item-right {
-            align-items: center;
-            display: flex;
-            font-size: .8rem;
-
-            .icon-platform {
-              display: flex;
-              height: 1rem;
-              width: 1rem;
-            }
-          }
-
-          &:not(:first-child) {
-            border-top: .05rem solid rgba($dark-color, 0.025);
-          }
-        }
-      }
-
-      .panel-widget-content {
-        .phi-rank {
-          width: fit-content;
-          align-items: center;
-          background: linear-gradient(124.2deg, #fff9d6 8%, #ffe2ba 34%, #f0a87c 74%, #f2a0b7 95%);
-          border-radius: .8rem;
-          display: flex;
-          gap: .25rem;
-          padding: .2rem .4rem .2rem .4rem;
-
-          .rank-label {
-
-            border-radius: 1rem;
-            font-size: .6rem;
-            font-weight: 700;
-            line-height: .8rem;
-            height: .8rem;
-            text-shadow: rgba($dark-color, .95);
-          }
-        }
-      }
-    }
-
     .collection-title {
       align-items: flex-start;
       display: flex;
@@ -712,7 +722,66 @@
         width: 4rem;
       }
     }
+  }
+}
 
+// Panel Widget
+.panel-widget {
+  margin: .8rem 0;
+
+  &:first-child {
+    margin-top: 0;
+  }
+
+  &:last-child {
+    margin-bottom: 0;
+  }
+
+  .panel-widget-title {
+    font-size: .7rem;
+    font-weight: 700;
+    line-height: 1.2rem;
+    margin-bottom: .5rem;
+    text-transform: uppercase;
+  }
+
+  .panel-widget-list {
+    background: $bg-color;
+    border: .05rem solid rgba($dark-color, 0.01);
+    border-radius: .4rem;
+    box-shadow: 0 .2rem .8rem -.2rem rgba($dark-color, 0.1);
+    color: $dark-color;
+    margin: 1rem 0;
+
+    .widget-list-item {
+      display: flex;
+      justify-content: space-between;
+      padding: .6rem;
+      .profile-badge{
+        background: transparent;
+        box-shadow: none;
+        padding: 0;
+        min-width: unset;
+      }
+      .list-item-right {
+        align-items: center;
+        display: flex;
+        font-size: .8rem;
+
+        .icon-platform {
+          display: flex;
+          height: 1rem;
+          width: 1rem;
+        }
+      }
+
+      &:not(:first-child) {
+        border-top: .05rem solid rgba($dark-color, 0.025);
+      }
+    }
+  }
+
+  .panel-widget-content {
     .traits-cards {
       display: flex;
       flex-wrap: wrap;
@@ -746,6 +815,70 @@
           font-size: .3rem;
           line-height: 1;
         }
+      }
+    }
+
+    .phi-rank {
+      width: fit-content;
+      align-items: center;
+      background: linear-gradient(124.2deg, #fff9d6 8%, #ffe2ba 34%, #f0a87c 74%, #f2a0b7 95%);
+      border-radius: .8rem;
+      display: flex;
+      gap: .25rem;
+      padding: .2rem .4rem .2rem .4rem;
+
+      .rank-label {
+        border-radius: 1rem;
+        font-size: .6rem;
+        font-weight: 700;
+        line-height: .8rem;
+        height: .8rem;
+        text-shadow: rgba($dark-color, .95);
+      }
+    }
+
+    .profile-interests {
+      width: 90%;
+      display: flex;
+      gap: .5rem;
+      align-items: center;
+      flex-wrap: wrap;
+
+      .interest-item {
+        border-radius: .2rem;
+
+        &.crypto,
+        &.lens {
+          background: linear-gradient(124.2deg, #d6fdff 8%, #bad1ff 34%, #7cd4f0 74%, #b4fffa 95%);
+          order: -1;
+        }
+      }
+    }
+
+    .channel-item {
+      border-radius: .4rem;
+      display: flex;
+      gap: .5rem;
+      margin: .2rem -.4rem;
+      padding: .4rem;
+      
+      &:focus,
+      &:hover {
+        background: $bg-color;
+        text-decoration: none;
+      }
+
+      .channel-item-icon {
+        border-radius: .4rem;
+        flex: 0 0 2rem;
+        object-fit: cover;
+        width: 2rem;
+      }
+
+      .channel-item-body {
+        display: flex;
+        flex-direction: column;
+        line-height: 1rem;
       }
     }
   }
