--- a/styles/_search.scss
+++ b/styles/_search.scss
@@ -329,10 +329,32 @@
   }
 
   .nfts {
+    position: relative;
     display: flex;
-    flex-wrap: wrap;
+    flex-direction: column;
     gap: .1rem;
     padding: 0 .8rem .4rem .8rem;
+
+
+    .nfts-list-container {
+      display: flex;
+      flex-wrap: wrap;
+      overflow: hidden;
+    }
+
+    .btn-list-more {
+      display: flex;
+      align-items: flex-end;
+      position: absolute;
+      left: 50%;
+      bottom: 0;
+      transform: translateX(-50%);
+      padding: .8rem;
+      width: 100%;
+      height: 12rem;
+      border-radius: .5rem;
+      background: linear-gradient(to bottom, rgba(255, 255, 255, 0) 40%, white 80%)
+    }
   }
 
   .label-domain {
