--- a/styles/_modal.scss
+++ b/styles/_modal.scss
@@ -893,6 +893,10 @@
         flex-direction: column;
         line-height: 1rem;
       }
+
+      .channel-item-subtitle {
+        font-size: .65rem;
+      }
     }
   }
 }
