--- a/styles/_search.scss
+++ b/styles/_search.scss
@@ -339,6 +339,7 @@
     .nfts-list-container {
       display: flex;
       flex-wrap: wrap;
+      margin: 0 -.15rem;
       overflow: hidden;
     }
 
@@ -351,9 +352,9 @@
       transform: translateX(-50%);
       padding: .8rem;
       width: 100%;
-      height: 12rem;
+      height: 6rem;
       border-radius: .5rem;
-      background: linear-gradient(to bottom, rgba(255, 255, 255, 0) 40%, white 80%)
+      background: linear-gradient(to bottom, rgba($bg-color, 0) 20%, rgba($bg-color, .95) 75%)
     }
   }
 
