--- a/styles/web3bio.scss
+++ b/styles/web3bio.scss
@@ -217,15 +217,16 @@ body {
 
   .header-menu {
     align-items: center;
-    // backdrop-filter: blur(.2rem);
-    background: rgba($light-color, .85);
+    backdrop-filter: blur(.2rem);
+    background: rgba($light-color, .5);
     border: .05rem solid rgba($light-color, .15);
     border-radius: .6rem;
-    box-shadow: 0 .2rem .8rem rgba(0, 0, 0, .1);
+    box-shadow: 0 .2rem .8rem rgba(0, 0, 0, .025);
     display: flex;
     gap: .2rem;
+    justify-content: space-between;
     padding: .25rem;
-    width: auto;
+    width: 100%;
   }
 
   .column {
@@ -400,10 +401,35 @@ body {
 
 // Home
 .home-features {
-  color: rgba($dark-color, .5);
+  // color: rgba($dark-color, .5);
   font-size: .7rem;
   font-weight: 500;
   padding: .5rem;
+
+  .home-title {
+    color: $dark-color;
+    font-size: 2rem;
+    font-weight: 800;
+    letter-spacing: -.025em;
+    line-height: 1.25;
+    margin: 1rem 0;
+  }
+
+  .home-label-pride {
+    align-items: center;
+    backdrop-filter: blur(.2rem);
+    background: rgba($light-color, .5);
+    border: rgba($light-color, .5);
+    border-radius: 1.25rem;
+    color: $dark-color;
+    display: inline-flex;
+    gap: .2rem;
+    height: 2.5rem;
+    line-height: 1.25;
+    margin: 0 .5rem;
+    padding: 0 .75rem;
+    width: auto;
+  }
 
   .card-feature {
     background: linear-gradient(70deg, lighten($gray-color, 30%), $light-color);
