--- a/styles/_profile.scss
+++ b/styles/_profile.scss
@@ -1202,9 +1202,7 @@
 
   // DegenScore Widget
   .profile-widget-degenscore {
-    background: linear-gradient(-45deg, rgba(#A381EB, .15) 0, rgba(#fff, 1) 55%);
-    border-radius: .6rem;
-    box-shadow: 0 .1rem .4rem rgba($dark-color, .04);
+    background: linear-gradient(45deg, rgba(#A381EB, .1) 0, rgba(#fff, 1) 25%);
     position: relative;
     width: 100%;
 
@@ -1219,6 +1217,7 @@
       display: none;
       height: 100%;
       left: 0;
+      overflow-y: auto;
       padding: 1rem;
       position: absolute;
       width: 100%;
@@ -1246,7 +1245,7 @@
     .widget-trait-list {
       display: flex;
       flex-wrap: wrap;
-      gap: .2rem;
+      gap: .4rem;
       height: 100%;
       width: 100%;
 
@@ -1292,10 +1291,7 @@
 
   // Webacy Widget
   .profile-widget-webacy {
-    background: linear-gradient(-45deg, rgba(#556DD0, .15) 0, rgba(#fff, 1) 55%);
-    border-radius: .6rem;
-    box-shadow: 0 .1rem .4rem rgba($dark-color, .04);
-    min-height: 8rem;
+    background: linear-gradient(45deg, rgba(#556DD0, .1) 0, rgba(#fff, 1) 25%);
     position: relative;
     width: 100%;
 
@@ -1326,13 +1322,13 @@
         &.high-risk {
           background: linear-gradient(-60deg, rgba(#EF4444, .05) 0, rgba(#EF4444, .15) 35%);
           border: .05rem solid rgba(#EF4444, .05);
-          color: rgba(#EF4444, .65);
+          color: rgba(#EF4444, .75);
         }
 
         &.medium-risk {
-          background: linear-gradient(-60deg, rgba(#ffb700, .05) 0, rgba(#ffb700, .15) 35%);
-          border: .05rem solid rgba(#ffb700, .05);
-          color: rgba(#ffb700, .85);
+          background: linear-gradient(-60deg, rgba(#F3AC3C, .05) 0, rgba(#F3AC3C, .15) 35%);
+          border: .05rem solid rgba(#F3AC3C, .1);
+          color: rgba(#F3AC3C, .75);
         }
       }
     }
